kubernetes/EKS/aws-alb-ingress-controller/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment-alb
  name: nginx-deployment-alb
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-deployment-alb
  type: NodePort
